syntax = "proto3";

package raftpb;

option go_package = "./raftpb";

// LogEntry Entry of log array
message LogEntry {
  int64 term = 1;  // raft term
  bytes command = 2;  // command
}

// RequestVote Candidate request vote argument
message RequestVoteArgs {
  int64 candidate_id = 1;
  int64 current_term = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

// RequestVoteReply Follower Reply to the candidate's RequestVote
message RequestVoteReply {
  int64 term = 1;
  bool vote_granted = 2;
}

// AppendEntries
message AppendEntriesArgs {
  int64 term = 1;
  int64 leader_id = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int64 leader_commit = 6;
}

message AppendEntriesReply {
  int64 term = 1;
  bool success = 2;
  // For fast backup optimization
  int64 conflict_index = 3;
  int64 conflict_term = 4;
  int64 conflict_len = 5;
}

// InstallSnapshot
message InstallSnapshotArgs {
  int64 term = 1;
  int64 leader_id = 2;
  int64 last_included_index = 3;
  int64 last_included_term = 4;
  bytes data = 5;
}

message InstallSnapshotReply {
  int64 term = 1;
}

// RaftService define the api of communication between raft nodes.
service RaftService {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
  rpc InstallSnapshot(InstallSnapshotArgs) returns (InstallSnapshotReply);
}